[gd_scene load_steps=9 format=2]

[ext_resource path="res://ingame_options.gd" type="Script" id=1]
[ext_resource path="res://Art/story_panel.png" type="Texture" id=2]
[ext_resource path="res://Art/close_b_unpressed.png" type="Texture" id=3]
[ext_resource path="res://Art/close_b_pressedt.png" type="Texture" id=4]
[ext_resource path="res://Art/close_b_hightlight.png" type="Texture" id=5]
[ext_resource path="res://bitpap/BitPap.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 4
outline_color = Color( 0.145098, 0.188235, 0.34902, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 4
outline_color = Color( 0.145098, 0.188235, 0.34902, 1 )
font_data = ExtResource( 6 )

[node name="Ingame_Options" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 137.0
margin_top = -99.0
margin_right = 333.0
margin_bottom = 65.0
rect_scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="center_text" type="Label" parent="."]
margin_left = 782.0
margin_top = 221.0
margin_right = 1059.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 1 )
text = "Options"
uppercase = true

[node name="Main_V_label" type="Label" parent="."]
margin_left = 476.0
margin_top = 380.0
margin_right = 826.0
margin_bottom = 460.0
custom_fonts/font = SubResource( 2 )
text = "Main Volume"
uppercase = true

[node name="Music_V_label" type="Label" parent="."]
margin_left = 476.0
margin_top = 509.0
margin_right = 826.0
margin_bottom = 589.0
custom_fonts/font = SubResource( 2 )
text = "music volume"
uppercase = true

[node name="SFX_V_label" type="Label" parent="."]
margin_left = 476.0
margin_top = 636.0
margin_right = 826.0
margin_bottom = 716.0
custom_fonts/font = SubResource( 2 )
text = "sfx volume"
uppercase = true

[node name="SFX_V_label2" type="Label" parent="."]
margin_left = 541.0
margin_top = 760.0
margin_right = 891.0
margin_bottom = 840.0
custom_fonts/font = SubResource( 2 )
text = "Full Screen"
uppercase = true

[node name="SFX_V_label3" type="Label" parent="."]
margin_left = 963.0
margin_top = 760.0
margin_right = 1313.0
margin_bottom = 840.0
custom_fonts/font = SubResource( 2 )
text = "windowed"
uppercase = true

[node name="main_v_slider" type="HSlider" parent="."]
margin_left = 846.0
margin_top = 339.0
margin_right = 987.0
margin_bottom = 374.0
rect_scale = Vector2( 4, 4 )
max_value = 1.0
step = 0.0
value = 1.0

[node name="music_v_slider" type="HSlider" parent="."]
margin_left = 846.0
margin_top = 465.0
margin_right = 987.0
margin_bottom = 500.0
rect_scale = Vector2( 4, 4 )
max_value = 1.0
step = 0.0
value = 1.0

[node name="sfx_v_slider" type="HSlider" parent="."]
margin_left = 846.0
margin_top = 592.0
margin_right = 987.0
margin_bottom = 627.0
rect_scale = Vector2( 4, 4 )
max_value = 1.0
step = 0.0
value = 1.0

[node name="full_screen_check" type="CheckBox" parent="."]
margin_left = 823.0
margin_top = 725.0
margin_right = 847.0
margin_bottom = 749.0
rect_scale = Vector2( 5, 5 )

[node name="window_check" type="CheckBox" parent="."]
margin_left = 1183.0
margin_top = 725.0
margin_right = 1207.0
margin_bottom = 749.0
rect_scale = Vector2( 5, 5 )

[node name="close_button" type="TextureButton" parent="."]
margin_left = 1319.0
margin_top = 181.0
margin_right = 1344.0
margin_bottom = 194.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[connection signal="value_changed" from="main_v_slider" to="." method="_on_main_v_slider_value_changed"]
[connection signal="value_changed" from="music_v_slider" to="." method="_on_music_v_slider_value_changed"]
[connection signal="value_changed" from="sfx_v_slider" to="." method="_on_sfx_v_slider_value_changed"]
[connection signal="toggled" from="full_screen_check" to="." method="_on_full_screen_check_toggled"]
[connection signal="toggled" from="window_check" to="." method="_on_window_check_toggled"]
[connection signal="mouse_entered" from="close_button" to="." method="_on_close_button_mouse_entered"]
[connection signal="pressed" from="close_button" to="." method="_on_close_button_pressed"]
